[project]
name = "aiyang_tripleapi"
description = "ComfyUI custom nodes integrating three Chinese AI image generation platforms (Hi Dream, Douban, NanoBanana) supporting text-to-image and image-to-image generation with parallel processing and robust error handling. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["Pillow>=9.0.0", "numpy>=1.21.0", "torch>=1.12.0"]

[project.urls]
Repository = "https://github.com/AlexXia007/AIYang_TripleAPI"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/AlexXia007/AIYang_TripleAPI/wiki"
"Bug Tracker" = "https://github.com/AlexXia007/AIYang_TripleAPI/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "AIYang_TripleAPI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

